# aflat

./: .gitignore  AGENTS.MD  Agents.MD  CMakeLists.txt  Dockerfile.sandbox  Docs.md  KeyPair.pem  README.md  aflat.cfg  coverage.sh  ebnf.ebnf  ebnf.egnf  first-steps.MD  format-all.sh  install.sh  makefile  out.s  rebuild-libs.sh
.github/workflows/: cmake.yml  sandbox-release.yml
Connections/: ConnectToTestEnv.bat  GrabFiles.bat  SendFiles.bat
Example/: a.out  main.af  out.s
Example/headers/: draw.gs
Example/lib/: io.s
Example/lib/head/: io.gs
Example/lib/src/: io.af  io.s
Example/print-int/: a.out  draw.s  main.af  out.s
Example/print-int/headers/: draw.gs
Example/print-int/lib/: io.s
Example/print-int/src/: draw.af
Example/src/: draw.af
Lib/Catch2/examples/: 010-TestCase.cpp  020-TestCase-1.cpp  020-TestCase-2.cpp  030-Asn-Require-Check.cpp  100-Fix-Section.cpp  110-Fix-ClassFixture.cpp  120-Bdd-ScenarioGivenWhenThen.cpp  210-Evt-EventListeners.cpp  231-Cfg-OutputStreams.cpp  300-Gen-OwnGenerator.cpp  301-Gen-MapTypeConversion.cpp  302-Gen-Table.cpp  (+2 more)
aflat-doc/: main.cpp
benchmark/: aflat.cfg  run_benchmarks.sh  sum.js  sum.py
benchmark/src/: sum.af
completions/: aflat.bash
include/: ASM.hpp  AST.hpp  CLI.hpp  CodeGenerator.hpp  CompilerUtils.hpp  Configs.hpp  ErrorReporter.hpp  Exceptions.hpp  HashMap.hpp  LSP.hpp  LinkedList.hpp  LinkedListS.hpp  Parser.hpp  PreProcessor.hpp  Progress.hpp  Scanner.hpp  Utils.hpp
include/CodeGenerator/: CodeGenerator.hpp  Expr.hpp  GenerationResult.hpp  MockCodeGenerator.hpp  ScopeManager.hpp  Types.hpp  Utils.hpp
include/Parser/: AST.hpp  Lower.hpp  Parser.hpp
include/Scan/: Scan.hpp  TextEnum.hpp  Token.hpp
include/lsp/: Server.hpp
include/rapidjson/: encodings.h  pointer.h  schema.h
libraries/std/: Collections.s  DateTime.s  String.s  asm.s  collections.s  concurrancy.s  concurrency.s  datetime.s  files.s  io.s  math.s  std.s  string.s  strings.s
lsp/: keywords.json
src/: APac.af  ASM.cpp  AST.cpp  CLI.cpp  CodeGenerator.cpp  CompilerUtils.cpp  ConfigLoader.cpp  Configs.cpp  Exceptions.cpp  LSP.cpp  Package.af  Parser.cpp  PreProcessor.cpp  Progress.cpp  Scanner.cpp  Utils.cpp  main.af  main.cpp  main.lsp.cpp
src/CodeGenerator/: CodeGenerator.cpp  Environment.cpp  ExprArithmetic.cpp  ExprImply.cpp  Expressions.cpp  GenExpr.cpp  GenExprCall.cpp  GenExprRest.cpp  GenExprVar.cpp  MockCodeGenerator.cpp  Resolver.cpp  ScopeManage.cpp  Statements.cpp  StatmentGenerators.cpp  Types.cpp  Utils.cpp
src/Parser/: AST.cpp  Argument.cpp  DeepCopy.cpp  Lower.cpp  NamespaceSwap.cpp  Parser.cpp  ReplaceTypes.cpp
src/Scan/: Scan.cpp
src/lsp/: Server.cpp  main.cpp
src/modules/: JSONParse.af  LoadingBar.af
src/test/: test.af
src/testLibs/: test.af
test/: catch.hpp  test.cpp  test_ASM.cpp  test_BuildLogging.cpp  test_BuySold.cpp  test_CLI.cpp  test_Cache.cpp  test_CodeGenerator.cpp  test_CompilerUtils.cpp  test_Configs.cpp  test_DeScope.cpp  test_DeepCopy.cpp  test_Ellipsis.cpp  test_Exceptions.cpp  test_Generic.cpp  test_HashMap.cpp  test_Immutable.cpp  test_Import.cpp  test_LeakWarning.cpp  test_LinkedList.cpp  test_LspServer.cpp  test_More.cpp  test_NamespaceSwap.cpp  test_NestedGenerics.cpp  test_Owned.cpp  test_ParseArgs.cpp  test_PreProcessor.cpp  test_ReturnNoSold.cpp  test_ReturnSold.cpp  test_SLinkedList.cpp  test_Scan.cpp  test_Scanner.cpp  test_ScopeManager.cpp  test_Sell.cpp  test_TemplateTypeGeneration.cpp  test_UnionAliasGeneric.cpp  test_UnionRef.cpp  test_UnionTemplate.cpp  test_Utils.cpp  test_When.cpp
(+475 files in other folders)
